...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/my_events_list"
            android:layout_width="match_parent"
            android:layout_height="511dp"
            android:layout_marginTop="12dp"
            android:outlineProvider="background"
            android:textAlignment="center" />

...
