...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.6"
                android:background="@drawable/rectangle_button"
                android:text="OK"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
...
